# amatelier

./: .env.example  .gitignore  404.html  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SKILL.md  docker-compose.yml  index.html  llms-full.txt  llms.txt  mkdocs.yml  pyproject.toml  sitemap.xml
.cursor/rules/: amatelier.mdc  atelier.mdc
.depth/: backend-delegation_gate.md  current_task.txt  manual-ci-local_gate.md  openmode-fixes-v1_gate.md  security-mitigations-v1_gate.md  steward-tool-use_gate.md  trait-reviewer-v1_gate.md  v0.4.0-roster-agnostic_gate.md  wire-judge-max-effort_gate.md
.depth/archive/: amatelier-observer-consolidated-v1_gate.md  amatelier-profile-repair-v1_gate.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml  wheel-smoke.yml
agents/clare/: IDENTITY.md
agents/haiku-assistant/: CLAUDE.md
agents/therapist/: CLAUDE.md
docs/: index.md
docs/explanation/: architecture.md  designing-agents.md  steward-design.md
docs/guides/: configure-backend.md  define-your-team.md  install.md  troubleshooting.md
docs/reference/: cli.md  config.md
docs/reference/protocols/: debrief.md  distillation.md  gemini-bridge.md  learning.md  memory-tiers.md  research.md  sparc-phases.md  spark-economy.md
docs/tutorials/: first-run.md
engine/: agent_memory.py  classify_concepts.py  evolver.py  gemini_agent.py  gemini_client.py  judge_scorer.py  store.py
engine/migrations/: 004_byzantine_flags.sql
examples/: README.md
examples/briefings/: full-demo.md  hello-world.md  single-worker.md
examples/sessions/2026-04-18-self-host-vs-api/: README.md  briefing.md  digest.json  latest-result.md  transcript.md
explanation/architecture/: index.html
explanation/steward-design/: index.html
guides/configure-backend/: index.html
guides/install/: index.html
guides/troubleshooting/: index.html
llm/: API.md  EXAMPLES.md  SCHEMA.md  SPEC.md  WORKFLOWS.md
protocols/: competition.md  roundtable.md  verification.md
reference/cli/: index.html
reference/config/: index.html
reference/protocols/competition/: index.html
reference/protocols/debrief/: index.html
reference/protocols/distillation/: index.html
reference/protocols/gemini-bridge/: index.html
reference/protocols/learning/: index.html
reference/protocols/memory-tiers/: index.html
reference/protocols/research/: index.html
reference/protocols/roundtable/: index.html
reference/protocols/sparc-phases/: index.html
reference/protocols/spark-economy/: index.html
reference/protocols/verification/: index.html
roundtable-server/: server.py  test_roundtable.py
scripts/: backfill_fires_when.py  ci_local.py  regen_full.py  regen_llm.py  regen_sitemap.py  regen_tool_rules.py  render_session.py  run-roundtable.sh  run_integration.sh  sync_claude_md_behaviors.py
search/: search_index.json
src/amatelier/: __init__.py  cli.py  config.json  llm_backend.py  paths.py  worker_registry.py
src/amatelier/agents/clare/: CLAUDE.md  traits.json
src/amatelier/agents/elena/: CLAUDE.md  traits.json
src/amatelier/agents/haiku-assistant/: IDENTITY.md
src/amatelier/agents/judge/: CLAUDE.md
src/amatelier/agents/marcus/: CLAUDE.md  IDENTITY.md  traits.json
src/amatelier/agents/naomi/: CLAUDE.md  IDENTITY.md  traits.json
src/amatelier/agents/opus-admin/: CLAUDE.md
src/amatelier/agents/simon/: CLAUDE.md  traits.json
src/amatelier/agents/templates/curated-five/: README.md
src/amatelier/agents/templates/curated-five/elena/: IDENTITY.md
src/amatelier/agents/templates/empty/: README.md
src/amatelier/agents/templates/minimal/: README.md
src/amatelier/agents/templates/minimal/admin/: IDENTITY.md
src/amatelier/agents/templates/minimal/alpha/: CLAUDE.md  IDENTITY.md
src/amatelier/agents/templates/minimal/beta/: CLAUDE.md  IDENTITY.md
src/amatelier/agents/templates/minimal/judge/: CLAUDE.md
src/amatelier/agents/templates/minimal/therapist/: IDENTITY.md
src/amatelier/agents/therapist/: CLAUDE.md
src/amatelier/engine/: agent_memory.py  analytics.py  backfill_distill.py  classify_concepts.py  claude_agent.py  db.py  distiller.py  embeddings.py  evolver.py  gemini_agent.py  gemini_client.py  judge_scorer.py  roundtable_runner.py  scorer.py  sonnet_observer.py  sparks.py  steward_dispatch.py  steward_tools.py  store.py  therapist.py
src/amatelier/engine/migrations/: 001_initial.sql  002_scores_table.sql  003_spark_ledger.sql
src/amatelier/roundtable-server/: BRIEFING_TEMPLATE.md  db_client.py  server.py  test_roundtable.py
src/amatelier/tools/: watch_roundtable.py
src/atelier/: __init__.py  cli.py
src/atelier/agents/clare/: CLAUDE.md
src/atelier/agents/elena/: CLAUDE.md
src/atelier/agents/judge/: IDENTITY.md
src/atelier/agents/marcus/: CLAUDE.md
src/atelier/agents/naomi/: CLAUDE.md
src/atelier/agents/opus-therapist/: CLAUDE.md
src/atelier/agents/simon/: IDENTITY.md
src/atelier/engine/: backfill_distill.py  distiller.py  roundtable_runner.py  steward_dispatch.py
src/atelier/roundtable-server/: db_client.py  watch_roundtable.py
src/atelier/store/: skill_templates.py
src/atelier/tools/: watch_roundtable.py
store/: catalog.json
tests/: test_db_integration.py  test_integration.py  test_mock_backend.py  test_refresh_seeds.py  test_smoke.py  test_watcher.py
tests/fixtures/: sample_roundtable.sql
tutorials/first-run/: index.html
