[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amatelier"
version = "0.2.0"
description = "A self-evolving multi-model AI team — runs in Claude Code or any OpenAI-compatible provider"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Maximillian" }]
keywords = ["claude-code", "multi-agent", "ai-team", "roundtable", "llm", "anthropic", "openai", "gemini", "openrouter"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
]
dependencies = [
  "platformdirs>=4.0",
  "anthropic>=0.40.0",
  "openai>=1.0",
  "google-genai>=1.51.0",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/amatayomosley-web/amatelier"
Documentation = "https://amatayomosley-web.github.io/amatelier/"
Issues = "https://github.com/amatayomosley-web/amatelier/issues"
Changelog = "https://github.com/amatayomosley-web/amatelier/blob/main/CHANGELOG.md"
Repository = "https://github.com/amatayomosley-web/amatelier"

[project.scripts]
amatelier = "amatelier.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/amatelier"]

# docs/ bundled into the wheel so pip-install users get offline reference.
# examples/, tests/, .github/, scripts/, llm/ stay clone-only by default.
[tool.hatch.build.targets.wheel.force-include]
"docs" = "amatelier/docs"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --ignore=tests/test_integration.py"

[tool.ruff]
line-length = 100
target-version = "py310"
# Engine code in src/amatelier/engine/ predates the Amatayo Standard
# restructure and contains patterns that trip advisory rules (SIM, UP,
# some B). Kept at the actionable baseline — errors (E), pyflakes (F),
# import sort (I) — so CI lint is signal, not noise. Cleanup of the
# advisory rules across the engine is tracked for a follow-up commit.
exclude = [
  # Engine / server / tools predate the Amatayo Standard restructure; lint
  # cleanup is tracked for a follow-up commit. Excluded so CI lint is
  # signal-positive for new code while legacy code settles.
  "src/amatelier/engine",
  "src/amatelier/agents",
  "src/amatelier/tools",
  "src/amatelier/roundtable-server",
  "src/amatelier/store/skill_templates.py",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# Tests intentionally import after sys.path manipulation; that trips E402
# but is the correct pattern here. Also allow long lines in test output.
"tests/**" = ["E402", "E501", "F401", "E741", "I001"]

[tool.mypy]
strict = true
python_version = "3.10"
